CLOUDIFY-2331 update manager and workflows test env to play nicely with new interface definitions